@@ -2,6 +2,7 @@
 	* [Engine] Misc fixes
 	* [Engine] Limit connect packets from one IP address in the past 2 seconds
 	* [Engine] Block all movement-triggered event entities, these should always be on a player
+	* [Engine] Cleaned server hibernation
 	
 2023-06-16 Dusan Jocic <dusanjocic@msn>
 	* [SoundSystem] Returns false if the sound wasn't freed
